--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="my_dialog" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="windowMinWidthMajor">70%</item>
+        <item name="windowMinWidthMinor">70%</item>
+        <item name="windowFixedHeightMinor">80%</item>
+        <item name="windowFixedHeightMajor">80%</item>
+    </style>
+
     <style name="Theme.ToDoListFirebase.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ToDoListFirebase.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
